splash gap fixed, margins fixed for NavBar

--- a/src/styling/NavBar.css
+++ b/src/styling/NavBar.css
@@ -1,7 +1,7 @@
 #NavBarContainer {
   height: 6rem;
   width: 100%;
-  position: absolute;
+  position: relative;
   display: flex;
   justify-content: space-between;
   z-index: 10;
