--- a/src/styling/Splash.css
+++ b/src/styling/Splash.css
@@ -1,4 +1,7 @@
 #videoTag {
+  margin-bottom: -0.5rem;
+  margin-top: -6rem;
+  position: relative;
   width: 100%;
   z-index: 0;
 }
